k8s/statefulset.yaml


---
apiVersion: v1
kind: Service
metadata:
  name: semaphore-ansible-semaphore
  namespace: automation
  labels:
    app.kubernetes.io/name: "ansible-semaphore"
    app.kubernetes.io/instance: "semaphore"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: ansible-semaphore
    app.kubernetes.io/instance: semaphore
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: semaphore-ansible-semaphore
  namespace: automation
  labels:
    app.kubernetes.io/name: "ansible-semaphore"
    app.kubernetes.io/instance: "semaphore"
spec:
  serviceName: semaphore-ansible-semaphore
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ansible-semaphore
      app.kubernetes.io/instance: semaphore
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "ansible-semaphore"
        app.kubernetes.io/instance: "semaphore"
    spec:
      serviceAccountName: semaphore-ansible-semaphore
      securityContext:
          fsGroup: 1001
      containers:
        - name: ansible-semaphore
          image: pauseandlearn/semaphorui-custom:v2.16.29
          command:
          - sh
          - -c
          - |
            if ! semaphore user get --config=/etc/semaphore/config.json --login "$SEMAPHORE_ADMIN_USERNAME" >/dev/null 2>&1; then
              if ! semaphore user add \
                --config=/etc/semaphore/config.json \
                --admin \
                --name="$SEMAPHORE_ADMIN_FULLNAME" \
                --login="$SEMAPHORE_ADMIN_USERNAME" \
                --password="$SEMAPHORE_ADMIN_PASSWORD" \
                --email="$SEMAPHORE_ADMIN_EMAIL"; then
                echo "❌ Failed to create admin user"
              else
                echo "✅ Admin user created"
              fi
            else
              echo "ℹ️ Admin already exists"
            fi
            exec /usr/local/bin/semaphore server --config=/etc/semaphore/config.json
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits: {}
            requests:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /etc/semaphore/config.json
              subPath: config.json
            - name: workdir
              mountPath: /tmp/semaphore
            - name: ssh
              mountPath: /home/semaphore/.ssh/ansible
              subPath: ansible
              readOnly: true
      volumes:
      - name: config
        projected:
          sources:
          - secret:
              name: semaphore-config
              items:
                - key: config.json
                  path: config.json
      - name: ssh
        projected:
          defaultMode: 0400
          sources:
          - secret:
              name: ansible-ssh
              items:
              - key: ansible
                path: ansible
      # - name: config
      #   configMap:
      #     name: semaphore-ansible-semaphore-config
      # - name: workdir
      #   persistentVolumeClaim:
      #     claimName: semaphore-ansible-semaphore-workdir
  volumeClaimTemplates:
    - metadata:
        name: workdir
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Pod
metadata:
  name: "semaphore-ansible-semaphore-test-connection"
  labels:
    app.kubernetes.io/name: "ansible-semaphore"
    app.kubernetes.io/instance: "semaphore"
spec:
  restartPolicy: Never
  containers:
    - name: wget
      image: pauseandlearn/busybox:latest  
      command:
        - wget
      args:
        - --spider
        - http://semaphore-ansible-semaphore:3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore-ing
  namespace: automation
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - automation.pauseandlearn.net
    secretName: pauseandlearn-tls
  rules:
  - host: automation.pauseandlearn.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: semaphore-ansible-semaphore
            port:
              name: http
